新增打开文件功能
Signed-off-by: 10cks <1195011908@qq.com>